# DigitalBritishPound

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  genesis.json
config/: peers.txt
docs/: ACCEPTANCE.md  DBC_Whitepaper_Public.md  FAQ.md  LAUNCH.md  PRODUCT.md  REDDIT_ANNOUNCEMENT.md  ROADMAP_V2.md  SECURITY.md  USER_GUIDE.md
installer/: dbc-installer.nsi
release-package/: README.txt  SHA256SUMS.txt  USER_GUIDE.txt  peers.enc
scripts/: build_release.ps1  generate_readme_pdf.py  generate_whitepaper_pdf.py  update_sha256sum.cmd
src/: consensus.rs  lib.rs  main.rs
src/api/: http.rs  mod.rs  status.rs
src/crypto/: british_work.rs  mod.rs  wallet.rs
src/network/: mod.rs  p2p.rs  peer_registry.rs  protocol.rs  seeds.rs
src/node/: chain.rs  genesis.rs  mempool.rs  miner.rs  mod.rs  uncles.rs  validation.rs  validation_tests.rs  wallet_query.rs
src/storage/: chaindb.rs  mod.rs
src/types/: dbc_types.rs  mod.rs  utxo.rs
tests/: wallet_integration.rs
