[package]
name = "dbc-node"
version = "1.0.2"
edition = "2021"

[dependencies]
# P2P Networking
libp2p = { version = "0.56.0", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "identify", "kad", "upnp", "tokio", "macros"] }

# Cryptography
schnorrkel = "0.11.5"   # Schnorr signatures (used by Polkadot/Substrate)
blake3     = "1.8.5"    # Fast cryptographic hashing
k256       = { version = "0.13.4", features = ["schnorr", "std"] }
sha3       = "0.10.8"
bech32     = "0.11.0"
bip39      = { version = "2.2.0", features = ["std", "rand"] }
bip32      = "0.5.3"
rand       = "0.8.5"

# Database
rocksdb = "0.24.0"

# Serialisation
serde         = { version = "1.0.228", features = ["derive"] }
serde_json    = "1.0.150"
bincode = "1.3.3"
thiserror = "2.0.17"

# Async Runtime
tokio = { version = "1.52.3", features = ["full"] }

# Logging / Tracing
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Utilities
hex  = "0.4.3"
sha2 = "0.11.0"
clap = { version = "4.5.45", features = ["derive"] }
anyhow = "1.0.99"
futures = "0.3.31"

chacha20poly1305 = "0.10"

# Windows GUI (launcher)
eframe = "0.27"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.20.0"